# fireflyframework-starter-data

./: README.md  pom.xml
docs/: README.md
docs/common/: README.md  api-reference.md  architecture.md  configuration.md  data-lineage.md  data-quality.md  data-transformation.md  examples.md  genai-bridge.md  getting-started.md  logging.md  mappers.md  observability.md  persistence.md  resiliency.md  testing.md
docs/data-enrichers/: README.md  guide.md
docs/data-jobs/: README.md  guide.md
fireflyframework-genai-data/: pyproject.toml
fireflyframework-genai-data/src/fireflyframework_genai_data/: __init__.py  client.py
fireflyframework-genai-data/src/fireflyframework_genai_data/agents/: templates.py
fireflyframework-genai-data/src/fireflyframework_genai_data/middleware/: lineage.py
fireflyframework-genai-data/src/fireflyframework_genai_data/steps/: enrichment_step.py  quality_step.py
fireflyframework-genai-data/src/fireflyframework_genai_data/tools/: __init__.py  enrichment_tool.py  job_tool.py  operations_tool.py  toolkit.py
fireflyframework-genai-data/tests/: test_enrichment_step.py  test_enrichment_tool.py  test_job_tool.py  test_lineage_middleware.py
src/main/java/org/fireflyframework/data/cache/: EnrichmentCacheKeyGenerator.java  EnrichmentCacheService.java  OperationCacheService.java
src/main/java/org/fireflyframework/data/config/: CqrsAutoConfiguration.java  DataConfiguration.java  DataEnrichmentAutoConfiguration.java  DataEnrichmentProperties.java  (+12 more)
src/main/resources/: banner.txt  logback-spring.xml
src/test/resources/: logback-test.xml
(+163 files in other folders)
