[project]
name = "fireflyframework-genai-data"
version = "26.02.07"
description = "GenAI bridge for fireflyframework-starter-data — tools, pipeline steps, middleware, and agent templates for native integration"
requires-python = ">=3.13"
license = "Apache-2.0"
authors = [
    { name = "Firefly Software Foundation" }
]
dependencies = [
    "fireflyframework-genai>=26.02.07",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.entry-points."fireflyframework_genai.tools"]
enrichment_tool = "fireflyframework_genai_data.tools.enrichment_tool:DataEnrichmentTool"
job_tool = "fireflyframework_genai_data.tools.job_tool:DataJobTool"
operations_tool = "fireflyframework_genai_data.tools.operations_tool:DataOperationsTool"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
